--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>I18N</name>
+  <name>edu.upc.dsa.I18N</name>
   <url>http://maven.apache.org</url>
 
   <properties>
